2004-06-09  Narayana Pattipati  <narayana.pattipati@wipro.com>

	* libgnomevfs/gnome-vfs-socket-buffer.c (gnome_vfs_socket_buffer_write):
	Consider bytes left to be written instead of total bytes while
	writing into the target in ftp:// method. Bugzilla bug#143320

2004-06-08  Dave Camp  <dave@novell.com>

	* modules/computer-method.c: (get_file), (build_file_name),
	(volume_mounted), (drive_connected), (fill_root): Escape
	the volume name before using it as a file name.

2004-06-07  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* monikers/bonobo-storage-fs.c: fix Bonobo_Storage_listContents so 
	that it uses the proper path.

Thu May 27 15:59:40 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/xdgmimemagic.c: Sync from upstream.

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/ftp-method.c: reset connection offset in
          ftp_connection_acquire (should fix #140583)

2004-05-16  Georges Karabin  <gkarabin@pobox.com>

	* doc/writing-modules.sgml: fixed prototypes of the module virtual 
	  functions, corrected a few spelling/grammatical mistakes,
	  reformulated some sentences for clarity.

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: fix filling of the 'type' field in 
	  GnomeVFSFileInfo, fixes bug #139371

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: truncate existing files when using 
	  gnome_vfs_create, fixes bug #140551

2004-05-15  Damien Carbery  <damien.carbery@sun.com>

	* modules/sftp-method.c: remove TEMP_FAILURE_RETRY macro since it's 
	  used only once and breaks compilation on Solaris.

2004-05-15  ynakai@redhat.com

	* doc/about.sgml: use 0777 permissions instead of 0x777 in sample code

2004-05-15  Morten Welinder  <mortenw@gnome.org>

	* configure.in: fix ngettext detection on Solaris and AIX

2004-05-15  Michael Wilson <Michael.Wilson@bull.net>

	* libgnomevfs/xdgmimeglob.h: removed unnecessary comma at the end of
	  an enum
